@@ -31,7 +31,7 @@ import schema namespace http = "http://expath.org/ns/http-client";
  :
  : Do not use this function directly but use http://www.expath.org/mod/http-client;send-request
  : instead since this function does not all the error checking. So
- : calling this function directly can let zorba crash!!
+ : calling this function directly can make zorba crash!!
  :
  : @param $request @see http://www.expath.org/mod/http-client;send-request
  : @param $href @see http://www.expath.org/mod/http-client;send-request
@@ -40,6 +40,44 @@ import schema namespace http = "http://expath.org/ns/http-client";
  : @return @see http://www.expath.org/mod/http-client;send-request
  :)
 declare sequential function httpclientimpl:http-send-request-impl (
+  $request as element(http:request, http:requestType)?,
+  $href as xs:string?,
+  $bodies as item()*
+) as item()+ external;
+
+(:~
+ : Helper function
+ :
+ : Do not use this function directly but use http://www.expath.org/mod/http-client;send-request
+ : instead since this function does not all the error checking. So
+ : calling this function directly can make zorba crash!!
+ :
+ : @param $request @see http://www.expath.org/mod/http-client;send-request
+ : @param $href @see http://www.expath.org/mod/http-client;send-request
+ : @param $bodies @see http://www.expath.org/mod/http-client;send-request
+ :
+ : @return @see http://www.expath.org/mod/http-client;send-request
+ :)
+declare function httpclientimpl:http-send-request-impl-deterministic (
+  $request as element(http:request, http:requestType)?,
+  $href as xs:string?,
+  $bodies as item()*
+) as item()+ external;
+
+(:~
+ : Helper function
+ :
+ : Do not use this function directly but use http://www.expath.org/mod/http-client;send-request
+ : instead since this function does not all the error checking. So
+ : calling this function directly can make zorba crash!!
+ :
+ : @param $request @see http://www.expath.org/mod/http-client;send-request
+ : @param $href @see http://www.expath.org/mod/http-client;send-request
+ : @param $bodies @see http://www.expath.org/mod/http-client;send-request
+ :
+ : @return @see http://www.expath.org/mod/http-client;send-request
+ :)
+declare nondeterministic function httpclientimpl:http-send-request-impl-nondeterministic (
   $request as element(http:request, http:requestType)?,
   $href as xs:string?,
   $bodies as item()*
