@@ -1,0 +1,4 @@
+import module namespace http = "http://expath.org/ns/http-client";
+
+http:send-request-deterministic((), "http://www.zorba-xquery.com/rest-tests/http1.xml")[2]
+
