@@ -1,6 +1,7 @@
 Zorba - The XQuery Processor
 version 1.4
   * added a datetime library module with nondeterministic functions
+  * new (non)deterministic send-request functions in the http-client module
 
 version 1.2
   * more introspection functions (e.g. in-scope-element and in-scope-attribute)
